make basic role management work
